--- a/style.css
+++ b/style.css
@@ -13,18 +13,16 @@
     background-color: #ff3d23;
     height: 55px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+
 }
 
-span {
+a {
     color: white;
     font-weight: bold;
     font-size: 1.5rem;
-    margin-right: 55px;
-    margin-left: 20px;
-
-
+    text-decoration: none;
 }
 
 img {
